--- a/.github/workflows/monsters-rolodex-deploy.yml
+++ b/.github/workflows/monsters-rolodex-deploy.yml
@@ -4,7 +4,7 @@ name: monsters-rolodex-deploy
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: ['main']
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -17,7 +17,7 @@ permissions:
 
 # Allow one concurrent deployment
 concurrency:
-  group: "pages"
+  group: 'pages'
   cancel-in-progress: false
 
 jobs:
@@ -46,6 +46,8 @@ jobs:
         with:
           # Upload dist repository
           path: './dist'
+      - name: Starting app...
+        run: npm run start
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
